GPv3: Shift-D and Alt-D doing the same thing on GPv3 object #114010

Closed
opened 2023-10-21 18:37:35 +02:00 by dupoxy · 2 comments
Contributor

System Information
Operating system: Windows-10-10.0.22621-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3070 Laptop GPU/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 527.99

Blender Version
Broken: version: 4.1.0 Alpha, branch: main, commit date: 2023-10-21 15:49, hash: eab204b0a4f9
Worked:

Short description of error
Shift-D and Alt-D doing the same thing on GPv3 object.

Exact steps for others to reproduce the error
open : #114010.blend
Try using Shift-D on the GPv3 object
The duplicate is linked but should not be.

**System Information** Operating system: Windows-10-10.0.22621-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3070 Laptop GPU/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 527.99 **Blender Version** Broken: version: 4.1.0 Alpha, branch: main, commit date: 2023-10-21 15:49, hash: `eab204b0a4f9` Worked: **Short description of error** Shift-D and Alt-D doing the same thing on GPv3 object. **Exact steps for others to reproduce the error** open : [#114010.blend](https://projects.blender.org/attachments/6e2734d0-41fb-4ef5-ac1f-2f764daa9170) Try using `Shift-D` on the GPv3 object The duplicate is linked but should not be.
dupoxy added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-10-21 18:37:36 +02:00
dupoxy changed title from `Shift-D` and `Alt-D` doing the same thing on GPv3 object to GPv3: `Shift-D` and `Alt-D` doing the same thing on GPv3 object 2023-10-21 18:39:23 +02:00
Iliya Katushenock added the
Interest
Grease Pencil
label 2023-10-21 18:48:08 +02:00
Falk David added this to the Grease Pencil project 2023-10-21 18:49:24 +02:00
Member

Can confirm, should respect the following preference

image

Can confirm, should respect the following preference ![image](/attachments/5d40a371-8ac9-4d3f-9e75-5d729b33af82)
109 KiB
Philipp Oeser added
Status
Confirmed
Module
Grease Pencil
and removed
Status
Needs Triage
labels 2023-10-23 10:50:45 +02:00
Member

should respect the following preference

In that case, following diff should fix this (I'll make a PR):

diff --git a/source/blender/blenkernel/intern/object.cc b/source/blender/blenkernel/intern/object.cc
index 8aaa802d471..ac914a994bb 100644
--- a/source/blender/blenkernel/intern/object.cc
+++ b/source/blender/blenkernel/intern/object.cc
@@ -2637,6 +2637,7 @@ Object *BKE_object_duplicate(Main *bmain,
       }
       break;
     case OB_GPENCIL_LEGACY:
+    case OB_GREASE_PENCIL:
       if (dupflag & USER_DUP_GPENCIL) {
         id_new = BKE_id_copy_for_duplicate(bmain, id_old, dupflag, copy_flags);
       }
> should respect the following preference In that case, following diff should fix this (I'll make a PR): ``` diff --git a/source/blender/blenkernel/intern/object.cc b/source/blender/blenkernel/intern/object.cc index 8aaa802d471..ac914a994bb 100644 --- a/source/blender/blenkernel/intern/object.cc +++ b/source/blender/blenkernel/intern/object.cc @@ -2637,6 +2637,7 @@ Object *BKE_object_duplicate(Main *bmain, } break; case OB_GPENCIL_LEGACY: + case OB_GREASE_PENCIL: if (dupflag & USER_DUP_GPENCIL) { id_new = BKE_id_copy_for_duplicate(bmain, id_old, dupflag, copy_flags); } ```
Pratik Borhade self-assigned this 2023-10-23 11:49:21 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-10-23 13:11:25 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#114010
No description provided.